@@ -53,6 +53,6 @@ Gem::Specification.new do |s|
 
   s.add_development_dependency('rake', '~> 0.8.7')
   s.add_development_dependency('awesome_print', '~> 0.2.1')
-  s.add_development_dependency('rspec', '~> 2.0.0.beta.22')
-  s.add_development_dependency('cucumber', '~> 0.9.1')
+  s.add_development_dependency('rspec', '~> 2.0.1')
+  s.add_development_dependency('cucumber', '~> 0.9.3')
 end
