@@ -7,7 +7,6 @@ require 'stringio'
 require 'gherkin/sexp_recorder'
 require 'gherkin/output_stream_string_io'
 require 'gherkin/java_libs'
-require 'gherkin/json'
 require 'gherkin/shared/lexer_group'
 require 'gherkin/shared/tags_group'
 require 'gherkin/shared/py_string_group'
